--- a/DSTClusterConfig/cluster.ini
+++ b/DSTClusterConfig/cluster.ini
@@ -24,9 +24,9 @@ pause_when_empty = true
 cluster_intention = cooperative
 
 ;;; [CHANGE THESE]
-cluster_name = DST Dedicated Server running on Docker :)
-cluster_description = Dedicated Server running on Docker bit.ly/docker-dst
-cluster_password = YouShallNotPass!!!
+cluster_name = LALAMOVE ♥
+cluster_description = lalamove to future
+cluster_password = 414428
 
 ;; true|false
 autosaver_enabled = true
