--- a/DSTClusterConfig/cluster.ini
+++ b/DSTClusterConfig/cluster.ini
@@ -24,8 +24,8 @@ pause_when_empty = true
 cluster_intention = cooperative
 
 ;;; [CHANGE THESE]
-cluster_name = LALAMOVE ♥
-cluster_description = lalamove to future
+cluster_name = ♥ Ppeet ♥
+cluster_description = Ppeet is a girl, not a boy.
 cluster_password = 414428
 
 ;; true|false
